SERVER-84731 not taking RSTL when waiting lastStableRecoveryTimestamp in resharding query (#17980)

GitOrigin-RevId: 8b277830cad843c512a891ebd19295cefab56371